--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav id="navbar" >
         <div class="navbar__logo">
             <i class="fab fa-diaspora"></i>
-            <a href = "#">D-SOP SOFT</a>
+            <a href = "#">D-SOP Soft</a>
         </div>
         <div class="navbar__menu">
          <ul class="navbar__menu">
@@ -49,7 +49,7 @@
         class="home__avatar"
         />
         
-        <h1 class="home__title">Welcome!!<br /> D-sop soft</h1>
+        <h1 class="home__title">Welcome!<br /> D-sop soft</h1>
         <h2 class="home__description">
             Create solutions with our passion
         </h2>
