--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <div class="skill">
                     <div class="skill__description">
-                        <span>Database(SQL,Oracle)</span>
+                        <span>SQL,Oracle</span>
                         <span>80%</span>
                     </div>
                     <div class="skill__bar">
